--- a/admissions/app/views/gaku/admin/admissions/change_student_state.js.erb
+++ b/admissions/app/views/gaku/admin/admissions/change_student_state.js.erb
@@ -4,8 +4,12 @@ $('div#state<%= @old_state_id %> table tr#student-<%= @student.id %>').fadeOut(f
   $('<%= render_js_partial("student", {:student => @student, :state => @state}) %>').hide().appendTo('div#state<%= @admission_record.admission_phase_state_id %> table tbody').fadeIn();
 });
 
+<%- if @state.auto_progress == true %>
+  $('div#state<%= @new_admission_record.admission_phase_state_id %> table tbody').append('<%= render_js_partial("student", {:student => @student, :state => @new_state}) %>')
+<% end %>
+
 <%- if @next_phase %>
-  $('a[href$="#phase_<%= @next_phase.id%>"]').trigger('click');
+  //$('a[href$="#phase_<%= @next_phase.id%>"]').trigger('click');
 <% end %>
 
 <%- @admission_method.admission_phases.each {|phase| %>
