--- a/admissions/app/views/gaku/admin/admissions/index.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/index.html.slim
@@ -1,6 +1,6 @@
-- content_for :title, t("admissions.candidates.list")
+- content_for :title, t(:'admissions.candidates.list')
 .row-fluid
-  h4.mt-xs.mb-0 = t("admissions.candidates.list")
+  h4.mt-xs.mb-0 = t(:'admissions.candidates.list')
 .row-fluid
   hr
 .row-fluid
