[admissions] Fix some i18n issues

--- a/admissions/app/views/gaku/admin/admissions/_students_list.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_students_list.html.slim
@@ -5,8 +5,8 @@
       = th t(:'name')
       = th t(:'birth')
       = th t(:'gender.label')
-      = th t(:'class_groups.name')
-      = th t(:'class_group_enrollments.seat_number')
+      = th t(:'class_group.name')
+      = th t(:'class_group_enrollment.seat_number')
       = th_actions 140
   tbody
     = render :partial => 'gaku/admin/admissions/student', :collection => @students.find_all { |h| h[:state_id] == state.id }.map { |i| i[:student] }, :as => 'student', :locals => { :state => state}
