--- a/admissions/app/views/gaku/admin/admissions/_student.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_student.html.slim
@@ -1,6 +1,6 @@
 tr id="student-#{student.id}"
   = render 'gaku/admin/admissions/student_fields', :student => student
-  td
+  td.manage
     - if student.admission.admitted == true
       = t("admissions.admitted_on") + " " + student.admitted.strftime("%d-%b-%Y")
     -else
@@ -11,3 +11,9 @@ tr id="student-#{student.id}"
         = hidden_field_tag :admission_method_id, @admission_method.id
         = submit_tag "Save"
       //= state.admission_phase.admission_phase_states.count
+      - if state.can_admit
+        = form_tag admit_student_admin_admissions_path, :remote => true, :id => "admit-student-form" do
+          = hidden_field_tag :student_id, student.id
+          = hidden_field_tag :admission_period_id, @admission_period.id
+          = hidden_field_tag :admission_method_id, @admission_method.id
+          = submit_tag "Admit"
