--- a/core/app/views/gaku/students/_form_fields.html.slim
+++ b/core/app/views/gaku/students/_form_fields.html.slim
@@ -8,7 +8,7 @@
     = f.text_field :name_reading, :label => name_reading_label
 .row-fluid
   .span6
-    = f.text_field :surname, :label => surname_reading_label
+    = f.text_field :surname, :label => surname_label
   .span6
     = f.text_field :name, :label => name_label
 
