Remove javascript_include_tag student_chooser

--- a/admissions/app/views/gaku/admin/admissions/students/_student_chooser.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/students/_student_chooser.html.slim
@@ -20,12 +20,12 @@
           h4 = t("admissions.create_multiple")
           = submit_tag t('admissions.create'), :class => 'btn btn-primary'
 
-        
+
 .row-fluid
   .span12.well
     #students-index-div
       =render 'gaku/students/students'
-= javascript_include_tag "gaku/student_chooser"
+/= javascript_include_tag "gaku/student_chooser"
 
 
 javascript:
