--- a/admissions/app/views/gaku/admin/admissions/_student_chooser.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_student_chooser.html.slim
@@ -22,7 +22,7 @@
         h4
           = state.name
         =render 'gaku/students/students'
-= javascript_include_tag "student_chooser"
+/= javascript_include_tag "student_chooser"
 
 
 javascript:
