fix courses and class_groups student search

--- a/core/app/views/gaku/students/_student_chooser.html.slim
+++ b/core/app/views/gaku/students/_student_chooser.html.slim
@@ -45,7 +45,7 @@
 
           = submit_tag t('course_enrollment.add'), :class => 'btn btn-primary'
 
-/= javascript_include_tag "gaku/student_chooser"
+= javascript_include_tag "gaku/student_chooser"
 
 
 javascript:
