remove student_chooser js requirement

--- a/admissions/app/views/gaku/admin/admissions/_phase.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_phase.html.slim
@@ -5,7 +5,7 @@
         h4 
           = state.name
         =render 'students_list', :state => state
-= javascript_include_tag "student_chooser"
+//= javascript_include_tag "student_chooser"
 
 
 javascript:
