--- a/core/app/assets/stylesheets/gaku/gaku_core.css
+++ b/core/app/assets/stylesheets/gaku/gaku_core.css
@@ -7,6 +7,7 @@
  *= require jquery.miniColors
  * require jquery.dataTables
  * require chosen
+ *= require gaku/exams
 
  *= require ./gaku_engine
  *= require ./devise/sessions
