--- a/core/app/views/gaku/devise/registrations/new.html.slim
+++ b/core/app/views/gaku/devise/registrations/new.html.slim
@@ -12,6 +12,9 @@ div style="width:320px;margin:0 auto;"
           = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
             = devise_error_messages!
             .row-fluid
+              = f.label :username, t("devise.username")
+              = f.email_field :username, :class => 'span12'
+            .row-fluid
               = f.label :email, t("devise.email")
               = f.email_field :email, :class => 'span12'
             .row-fluid
