--- a/core/app/views/gaku/devise/confirmations/new.html.slim
+++ b/core/app/views/gaku/devise/confirmations/new.html.slim
@@ -2,8 +2,8 @@ h2 Resend confirmation instructions
 = form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f|
   = devise_error_messages!
   div
-    = f.label :email
+    = f.label :login, t(:'devise.login')
     br/
-    = f.email_field :email
+    = f.email_field :login
   div= f.submit "Resend confirmation instructions"
 = render "devise/shared/links"
