--- a/core/app/views/gaku/devise/passwords/new.html.slim
+++ b/core/app/views/gaku/devise/passwords/new.html.slim
@@ -2,7 +2,7 @@ h2 Forgot your password?
 = form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f|
   = devise_error_messages!
   div
-    = f.label :email
-    = f.email_field :email
+    = f.label :login, t(:'devise.login')
+    = f.email_field :login
   div= f.submit "Send me reset password instructions"
 = render "devise/shared/links"
