--- a/core/app/views/gaku/devise/registrations/edit.html.slim
+++ b/core/app/views/gaku/devise/registrations/edit.html.slim
@@ -3,7 +3,7 @@ h2
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
   = devise_error_messages!
    div
-    = f.label :username, t('devise.username')
+    = f.label :username, t(:'devise.username')
     br/
     = f.email_field :username
   div
