[view/menubar] show username instead of email in menubar

--- a/core/app/views/gaku/shared/_login_widget.html.slim
+++ b/core/app/views/gaku/shared/_login_widget.html.slim
@@ -4,7 +4,7 @@ ul.nav.pull-right style="margin-right:0px"
     li
       /.btn-group
         a.btn.btn-success.dropdown-toggle data-toggle="dropdown" href="#"
-          i.icon-user.icon-white 
+          i.icon-user.icon-white
           = " " + current_user.email + " "
           b.caret
         ul.dropdown-menu
@@ -15,8 +15,8 @@ ul.nav.pull-right style="margin-right:0px"
               = " "+t("config.label")
       .btn-group
         button.btn.btn-small.btn-success
-          i.icon-user.icon-white 
-          = " " + current_user.email + " "
+          i.icon-user.icon-white
+          = " " + current_user.username + " "
         button.btn.btn-small.btn-warning.dropdown-toggle data-toggle="dropdown"
           span.caret style="border-top-color:white;border-bottom-color:white;"
         ul.dropdown-menu
