[fix] change email_field to text_field for username

--- a/core/app/views/gaku/devise/registrations/edit.html.slim
+++ b/core/app/views/gaku/devise/registrations/edit.html.slim
@@ -5,7 +5,7 @@ h2
    div
     = f.label :username, t(:'devise.username')
     br/
-    = f.email_field :username
+    = f.text_field :username
   div
     = f.label :email
     br/
