--- a/core/app/views/gaku/exams/exam_portions/create.js.erb
+++ b/core/app/views/gaku/exams/exam_portions/create.js.erb
@@ -2,7 +2,7 @@ $('#new-exam-exam-portion').slideToggle();
 $('#new-exam-exam-portion-link').show();
 showNotice("<%= render_flash %>");
 
-$('#exam-exam-portions-index tbody').append('<%= render_js_partial("gaku/exams/exam_portions/exam_portion", {:exam_portion => @exam.exam_portions.last}) %>');
+$('#exam-exam-portions-index tbody').append('<%= render_js_partial("gaku/exams/exam_portions/exam_portion", {:exam_portion => @exam_portion}) %>');
 
 $('.exam-exam-portions-count').html("<%= print_count(@count+1, t_exam_portion_list) %>");
 
