--- a/core/app/views/gaku/students/_student_chooser.html.slim
+++ b/core/app/views/gaku/students/_student_chooser.html.slim
@@ -1,7 +1,7 @@
 =render 'gaku/students/search/form'
 
 .row-fluid.hide#students-checked-div
-  .span6.well
+  .span12.well.mt-m
     h4.pull-left= t(:'student.chosen_students')
     h4.chosen-count.pull-left
     .table-action.show-chosen-table.pull-right = link_to t(:show),nil
@@ -19,35 +19,39 @@
           = hidden_field_tag "source", "class_groups"
           h4 = "Adding students to " + @class_group.name
           = submit_tag t(:enroll_to_class), :class => 'btn btn-primary'
-      -elsif !@course.nil?
+      - elsif !@course.nil?
         = form_tag( enroll_students_course_enrollments_path, :method => "post", :id => "enroll-to-course-form", :remote => true) do
           = hidden_field_tag "course_id", @course.id
           = hidden_field_tag "source", "courses"
           h4 = "Adding students to " + @course.code
           = submit_tag t('course_enrollment.add'), :class => 'btn btn-primary'
-      -elsif !@admission.nil?
+      - elsif !@admission.nil?
         = form_tag( admissions_path, :method => "post", :id => "enroll-to-course-form", :remote => true) do
           = form.hidden_field :admission_period_id, :value => params[:admission_period_id]
           = form.hidden_field :admission_method_id, :value => params[:admission_method_id]
           h4 = "Adding students to admission"
           = submit_tag t('admissions.add'), :class => 'btn btn-primary'
       - else
-        .span12 style="margin-top:10px;"
-          = form_tag( enroll_students_class_group_enrollments_path, :method => "post", :id => "enroll-to-class-form", :remote => true) do
-            .span8
-              = select_tag "class_group_id", class_groups, {:class => "class_group-select"}
-
-            = submit_tag t(:enroll_to_class), :class => 'btn btn-primary'
-        .span12 style="margin-top:10px;"
-          = form_tag( enroll_students_course_enrollments_path, :method => "post", :id => "enroll-to-course-form", :remote => true) do
-            .span8
-              = select_tag "course_id", courses, {:class => "class_group-select"}
-
-          = submit_tag t('course_enrollment.add'), :class => 'btn btn-primary'
+        .row-fluid
+          .span12 style="margin-top:10px;"
+            = form_tag( enroll_students_class_group_enrollments_path, :method => "post", :id => "enroll-to-class-form", :remote => true) do
+              .row-fluid
+                .span12
+                  = select_tag "class_group_id", class_groups, {:class => "class_group-select"}
+              .row-fluid
+                = submit_tag t(:enroll_to_class), :class => 'btn btn-primary'
+        .row-fluid
+          .span12 style="margin-top:10px;"
+            = form_tag( enroll_students_course_enrollments_path, :method => "post", :id => "enroll-to-course-form", :remote => true) do
+              .row-fluid
+                .span12
+                  = select_tag "course_id", courses, {:class => "class_group-select"}
+              .row-fluid
+                = submit_tag t('course_enrollment.add'), :class => 'btn btn-primary'
 
 /= javascript_include_tag "gaku/student_chooser"
 
-
 javascript:
-  $(".class_group-select").combobox();
-
+  $(document).ready(function(){
+    $(".class_group-select").combobox();
+  });
