[exam portion] after delete last exam portion destroy exam

--- a/core/app/views/gaku/exams/exam_portions/destroy.js.erb
+++ b/core/app/views/gaku/exams/exam_portions/destroy.js.erb
@@ -1,4 +1,8 @@
-$('.exam-exam-portions-count').html("<%= print_count(@count-1, t_exam_portion_list) %>");
-$('[data-id=<%= @exam_portion.id %>]').remove();
-$('#weight-total').text('<%= @exam.total_weight %>');
-showNotice("<%= render_flash %>");
+<% if @exam.destroyed? %>
+  window.location.href = '/exams'
+<% else %>
+  $('.exam-exam-portions-count').html("<%= print_count(@count-1, t_exam_portion_list) %>");
+  $('[data-id=<%= @exam_portion.id %>]').remove();
+  $('#weight-total').text('<%= @exam.total_weight %>');
+  showNotice("<%= render_flash %>");
+<% end %>
