admission phase exams v1

--- a/admissions/app/views/gaku/admin/admission_methods/admission_phases/_admission_phases.html.slim
+++ b/admissions/app/views/gaku/admin/admission_methods/admission_phases/_admission_phases.html.slim
@@ -15,6 +15,7 @@
           = th t(:'admission_phases.order')
           = th t(:'admission_phases.singular')
           = th t(:'admission_phases.phase_handler')
+          = th t(:'admission_phases.exam')
           = th t(:'admission_phase_states.plural')
           = th_actions 2
       tbody
