--- a/core/app/views/gaku/students/commute_methods/update.js.erb
+++ b/core/app/views/gaku/students/commute_methods/update.js.erb
@@ -1,2 +1,3 @@
-$('#student-commute-method-form').html('<%= render_js_partial("gaku/students/commute_methods/commute_method", :student => @student) %>');
+$('#student-commute-method').html('<%= render_js_partial("gaku/students/commute_methods/commute_method", :student => @student) %>');
+$('#student-commute-method-modal').modal('hide');
 showNotice("<%= render_flash %>");
