Zaikousei importing working with sidekiq

--- a/core/app/views/gaku/students/importer/school_station_preview.html.slim
+++ b/core/app/views/gaku/students/importer/school_station_preview.html.slim
@@ -1,5 +1,6 @@
-h3 student import preview
-=@results[:status]
-br /
-p row count:
-=@results[:record_count]
+/h3 student import preview
+/=@results[:status]
+/br /
+/p row count:
+/=@results[:record_count]
+b Importing
