--- a/core/app/views/gaku/exams/grading.html.slim
+++ b/core/app/views/gaku/exams/grading.html.slim
@@ -10,7 +10,7 @@ javascript:
   var grades = '#{@grades.to_json(:root => false).to_s.html_safe}'
   var ranks = '#{@ranks.to_json(:root => false).to_s.html_safe}'
   var attendances = '#{@student_portion_attendance.to_json(:root => false).to_s.html_safe}'
-  
+  var path_to_exam = '#{@path_to_exam.to_json.to_s.html_safe}'
 coffee:
   $(document).ready ->
     router = new GAKUEngine.Routers.ExamsRouter
@@ -23,8 +23,9 @@ coffee:
       grades: $.parseJSON(grades)
       ranks: $.parseJSON(ranks)
       attendances: $.parseJSON(attendances)
+      path_to_exam: $.parseJSON(path_to_exam)
     Backbone.history.start()
-    
+
     console.log("grading.html.slim dayo-")
     tableSizeFix = ->
       $('.exam_grid').tablefix({width: fixW, height: fixH, fixRows: 2, fixCols: 3})
