--- a/admissions/app/views/gaku/admin/admissions/create.js.erb
+++ b/admissions/app/views/gaku/admin/admissions/create.js.erb
@@ -6,4 +6,5 @@ $('#state<%= @admission_phase_record.admission_phase_state.id.to_s %> #students-
 
 <%- @admission_method.admission_phases.each {|phase| %>
   $('#phase_<%= phase.id %>_tab').text('<%= phase.name + '(' + phase.admission_phase_records.count.to_s + ')'%>');
+  $('#phase_<%= phase.id %>-grade-button').html('<%= render_js_partial("grade_button", :phase => phase) %>');
 <% } %>
