fix grade button

--- a/admissions/app/views/gaku/admin/admissions/_grade_button.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_grade_button.html.slim
@@ -1,5 +1,5 @@
 - if !phase.exam.nil?
   - if phase.admission_phase_records.count > 0
-    = link_to 'Grade', grading_admin_admission_phase_exam_path(phase, phase.exam)
+    = button t('exams.grade'), grading_admin_admission_phase_exam_path(phase, phase.exam)
   - else
     = t('admission_phases.no_students')
