admission exams showing v2

--- a/admissions/app/views/gaku/admin/admissions/_student_fields.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_student_fields.html.slim
@@ -7,10 +7,14 @@ td.seat-number = student.class_group_enrollments.empty? ? '' : student.class_gro
 // TODO: move this to helper
 - if !phase.exam.nil?
   td.exam-score
-    - score = 0
+    - total_score = 0
+    - student_graded = false
     - phase.exam.exam_portions.each do |exam_portion|
-      - score += Gaku::ExamPortionScore.where(:exam_portion_id => exam_portion.id, :student_id => student.id).score
-    - if score == 0
+      - portion_score = Gaku::ExamPortionScore.find_by_exam_portion_id_and_student_id(exam_portion.id,  student.id)
+      - if !portion_score.nil?
+        - student_graded = true
+        - total_score += portion_score.score
+    - if !student_graded
       = t(:'exams.not_graded')
     - else
-      = score
+      = total_score
