admission exams show v3

--- a/admissions/app/views/gaku/admin/admissions/_student_fields.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_student_fields.html.slim
@@ -13,7 +13,7 @@ td.seat-number = student.class_group_enrollments.empty? ? '' : student.class_gro
       - portion_score = Gaku::ExamPortionScore.find_by_exam_portion_id_and_student_id(exam_portion.id,  student.id)
       - if !portion_score.nil?
         - student_graded = true
-        - total_score += portion_score.score
+        - total_score += portion_score.score.to_i
     - if !student_graded
       = t(:'exams.not_graded')
     - else
