--- a/admissions/app/views/gaku/admin/admissions/_student_fields.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_student_fields.html.slim
@@ -6,4 +6,4 @@ td.class-name = student.class_group_enrollments.empty? ? '' : student.class_grou
 td.seat-number = student.class_group_enrollments.empty? ? '' : student.class_group_enrollments.last.seat_number
 // TODO: move this to helper
 - if !phase.exam.nil?
-  td.exam-score = @students.select{|f| f[:student_id] == student.id}[0][:exam_score]
+  td.exam-score = @students.select{|f| f[:student] == student}[0][:exam_score]
