--- a/admissions/app/views/gaku/admin/admissions/_period.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_period.html.slim
@@ -2,4 +2,4 @@
   = form_tag change_admission_period_admin_admissions_path, :remote => true, :id => "change-admission-period-form" do
     = select_tag :admission_period, options_from_collection_for_select(@admission_periods, 'id', 'name', admission_period.id), :onchange => "$('#change-admission-period-form').submit()", :class => "span12"
 - else
-  'No period available.'
+  = t(:'admission_periods.no_period')
