--- a/admissions/app/views/gaku/admin/admissions/change_admission_period.js.erb
+++ b/admissions/app/views/gaku/admin/admissions/change_admission_period.js.erb
@@ -1,3 +1,8 @@
 $('#admission-method-selection').html('<%= render_js_partial("method", {:admission_methods => @admission_methods}) %>');
-$('#admission-phases').html('<%= render_js_partial("phases", {:admission_method => @admission_methods.first}) %>');
-$('#new-admin-admission-link').html('<%= render_js_partial("links", {:admission_method => @admission_method}) %>');
+
+<% if request.referer.include? 'listing_admissions' %>
+  $('#admissions-list').html('<%= render_js_partial("admissions_list", {:admission_method => @admission_methods.first}) %>');
+<% else %>
+  $('#admission-phases').html('<%= render_js_partial("phases", {:admission_method => @admission_methods.first}) %>');
+  $('#new-admin-admission-link').html('<%= render_js_partial("links", {:admission_method => @admission_method}) %>');
+<% end %>  
