--- a/core/app/views/gaku/admin/schools/_master_school.html.slim
+++ b/core/app/views/gaku/admin/schools/_master_school.html.slim
@@ -3,7 +3,7 @@
   .span6
     = table do
       tr
-        th.btn-c1  width="25%" = t(:'school.master_school')
+        th.btn-c1  width="25%" = t(:'school.master')
         td = master_school.name
       tr
         th.btn-c2 = t(:'school.code')
