Remove javascript_include_tag

--- a/core/app/views/gaku/students/_student_chooser.html.slim
+++ b/core/app/views/gaku/students/_student_chooser.html.slim
@@ -49,7 +49,7 @@
               .row-fluid
                 = submit_tag t('course_enrollment.add'), :class => 'btn btn-primary'
 
-= javascript_include_tag "gaku/student_chooser"
+/= javascript_include_tag "gaku/student_chooser"
 
 javascript:
   $(document).ready(function(){
