--- a/core/app/views/gaku/exams/exam_portions/_exam_portions.html.slim
+++ b/core/app/views/gaku/exams/exam_portions/_exam_portions.html.slim
@@ -10,5 +10,5 @@
         = th t(:'exam_portion.problem_count')
         = th t(:'exam_portion.attached_file_count')
         = th_actions 3
-    tbody id='exam-portion-sorting' data-sort-url="#{sort_exam_exam_portions_path(@exam)}"
+    tbody class='sortable' data-sort-url="#{sort_exam_exam_portions_path(@exam)}"
       = render :partial => 'gaku/exams/exam_portions/exam_portion', :collection => @exam.exam_portions, :as => :exam_portion
