Added icons to student index

--- a/core/app/views/gaku/shared/fields/_student_fields.html.slim
+++ b/core/app/views/gaku/shared/fields/_student_fields.html.slim
@@ -1,8 +1,8 @@
--if @enrolled_students && @enrolled_students.include?(student.id.to_s)
+- if @enrolled_students && @enrolled_students.include?(student.id.to_s)
 	td.vm-tc = image_tag 'check.png', :class => 'enrolled'
--elsif @selected_students
+- elsif @selected_students
   td.vm-tc = check_box_tag "","", (@selected_students.include?('student-'+student.id.to_s) ? true : false), :class => "student-check student-#{student.id}", :id => "student-#{student.id}"
--else
+- else
   td.vm-tc = check_box_tag "","", false, :class => "student-check student-#{student.id}", :id => "student-#{student.id}"
 td.surname = student.surname
 td.name = student.name
@@ -12,3 +12,10 @@ td.class-name = student.class_group_enrollments.empty? ? '' : student.class_grou
 td.seat-number = student.class_group_enrollments.empty? ? '' : student.class_group_enrollments.last.seat_number
 td.admitted = student.admitted
 td.address = student.address_widget
+td.assignments
+  - student.addresses.count.times do
+    = address_icon
+  - student.contacts.count.times do
+    = contact_icon
+  - student.guardians.count.times do
+    = guardian_icon
