--- a/core/app/views/gaku/students/_students.html.slim
+++ b/core/app/views/gaku/students/_students.html.slim
@@ -10,6 +10,7 @@
       = th t(:'class_group_enrollment.seat_number')
       = th t(:'admitted')
       = th t(:'address.primary')
+      = th t(:'assignment.plural')
 
       - if ['gaku/students', 'gaku/admissions'].include? params[:controller]
         = th_actions 2
