Add exams to syllabus index

--- a/core/app/views/gaku/shared/fields/_syllabus_fields.html.slim
+++ b/core/app/views/gaku/shared/fields/_syllabus_fields.html.slim
@@ -1,4 +1,5 @@
-td.code= link_to syllabus.code, edit_syllabus_path(syllabus)
-td.name= syllabus.name
-td.description= syllabus.description
-td.credits= syllabus.credits
+td.code = link_to syllabus.code, edit_syllabus_path(syllabus)
+td.name = syllabus.name
+td.description = syllabus.description
+td.credits = syllabus.credits
+td.exams = syllabus.exams.count
