[chooser] pagination, counting, autocomplete custumization

--- a/core/app/assets/stylesheets/gaku/gaku_core.css
+++ b/core/app/assets/stylesheets/gaku/gaku_core.css
@@ -3,6 +3,7 @@
  *= require bootstrap
  *= require bootstrap-responsive
  *= require tbs_datepicker/css/datepicker
+ *= require jquery-ui-1.9.2.custom.min.css
  *= require jquery_validation_engine/validationEngine.jquery
  *= require jquery.miniColors
  * require jquery.dataTables
