--- a/admissions/app/views/gaku/admin/admissions/_delete_confirm.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_delete_confirm.html.slim
@@ -1,11 +1,4 @@
 row-fluid
   .span12
     #admission-delete
-      = ajax_soft_delete :id => 'delete-admission-link'
-  .delete-modal
-    =render 'gaku/shared/delete_modal_remote', :target => [:soft_delete, :admin, admission]
-
-coffee:
-  $('#delete-admission-link').on 'click', (e)->
-    e.preventDefault()
-    $('#delete-modal').modal('show')
+      =link_to ("<i class='icon-white icon-remove'></i>").html_safe, [:soft_delete, :admin, admission], :method => :delete, :remote => true, :class => 'btn btn-mini btn-danger delete-link', :data => {:confirm => t('confirm_delete')}
