--- a/core/app/views/gaku/shared/menu/_admin.html.erb
+++ b/core/app/views/gaku/shared/menu/_admin.html.erb
@@ -23,6 +23,19 @@
       </ul>
     </li>
 
+    <li class="dropdown-submenu" data-hook="changes_sub_menu">
+      <a tabindex='-1' href='#'><%= t('menu.admin.changes.changes') %></a>
+      <ul class="dropdown-menu">
+        <li data-hook="student_changes"><%= link_to t('menu.admin.changes.students'), admin_changes_students_path %></li>
+        <li data-hook="student_address_changes">
+          <%= link_to t('menu.admin.changes.student_addresses'), admin_changes_student_addresses_path %>
+        </li>
+        <li data-hook="student_contact_changes">
+          <%= link_to t('menu.admin.changes.student_contacts'), admin_changes_student_contacts_path %>
+        </li>
+      </ul>
+    </li>
+
     <li class="dropdown-submenu" data-hook="presets_sub_menu">
       <a tabindex='-1' href='#'><%= t('menu.admin.preset.plural') %></a>
       <ul class="dropdown-menu">
