Fix Student pagination

--- a/core/app/views/gaku/students/_students.html.slim
+++ b/core/app/views/gaku/students/_students.html.slim
@@ -19,4 +19,4 @@
     = render :partial => 'gaku/students/student', :collection => @students, :as => 'student'
 
 
-=paginate @students
+/=paginate @students
