Small visual fixes for admissions

--- a/admissions/app/views/gaku/admin/admission_periods/_modal.html.slim
+++ b/admissions/app/views/gaku/admin/admission_periods/_modal.html.slim
@@ -2,8 +2,5 @@
   = modal_header t(:'admission_periods.edit')
   = modal_nested_form_for [:admin, @admission_period] do |f|
     = modal_body do
-      .row-fluid
-        = render 'form_fields', :f => f
-      = well_div do
-        = submit_button t('admission_periods.save'), :id => 'submit-admin-admission-period-button'
-        = link_to_cancel :id => 'cancel-admin-admission-period-link'
+      = render 'form_fields', :f => f
+      = buttons_for @admission_period, :nested_id => 'admin-admission-period', :label => t('admission_periods.save')
