--- a/admissions/app/views/gaku/admin/admissions/_student_form_fields.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_student_form_fields.html.slim
@@ -5,24 +5,20 @@
     = f.text_field :name_reading, :label => name_reading_label
 .row-fluid
   .span6
-    = f.text_field :surname, :label => surname_reading_label
+    = f.text_field :surname, :label => surname_label
   .span6
     = f.text_field :name, :label => name_label
 
 .row-fluid
-  .span3
+  .span6
     = f.text_field :birth_date, :class => "datepicker", :label => t(:birth_date)
-  .span3
+  .span6
     = f.select :gender, genders, {:prompt => t(:'gender.choose'), :selected => gender_preset}, :label => t(:gender)
-  .span3
-    = f.text_field :phone, :label => t(:phone)
-  .span3
-    = f.text_field :email, :label => t(:email)
 
 .row-fluid
-  .span3
+  .span4
     = f.text_field :admitted, :class => "datepicker", :label => t(:admitted)
-  .span3
+  .span4
     = f.text_field :graduated, :class => "datepicker", :label => t(:graduated)
-  .span3
+  .span4
     = f.select :scholarship_status_id, scholarship_statuses, {:include_blank => true}, :label => t(:scholarship_status)
