--- a/core/app/views/gaku/students/addresses/_fields.html.slim
+++ b/core/app/views/gaku/students/addresses/_fields.html.slim
@@ -2,4 +2,4 @@
 = render 'gaku/shared/fields/address_fields', :address => address, :target => [@student, address]
 td
   = ajax_link_to_edit [:edit, @student, address]
-  = ajax_link_to_delete [@student, address]
+  = ajax_soft_delete [:soft_delete, @student, address]
