Use to_s method for Student in admin/disposals/student_addresses

--- a/core/app/views/gaku/admin/disposals/_address.html.slim
+++ b/core/app/views/gaku/admin/disposals/_address.html.slim
@@ -1,5 +1,5 @@
 tr
-  td ="#{student_address.student.name} #{student_address.student.surname}"
+  td = student_address.student
   td = student_address.address.title
   td = student_address.address.country
   td = student_address.address.zipcode
