Add disposals/student_addresses to the menu

--- a/core/app/views/gaku/shared/menu/_admin.html.erb
+++ b/core/app/views/gaku/shared/menu/_admin.html.erb
@@ -56,6 +56,9 @@
         <li data-hook="course_group_disposals">
           <%= link_to t('menu.admin.disposals.course_group'), course_groups_admin_disposals_path %>
         </li>
+        <li data-hook="student_addresses_disposals">
+          <%= link_to t('menu.admin.disposals.student_address'), student_addresses_admin_disposals_path %>
+        </li>
       </ul>
     </li>
 
