--- a/core/app/views/gaku/students/_form_fields.html.slim
+++ b/core/app/views/gaku/students/_form_fields.html.slim
@@ -25,3 +25,7 @@
     = f.text_field :graduated, :class => "datepicker", :label => t(:graduated)
   .span4
     = f.select :scholarship_status_id, scholarship_statuses, {:include_blank => true}, :label => t(:scholarship_status)
+
+coffee:
+  $(document).ready ->
+    $('.datepicker').datepicker()
