--- a/core/app/views/gaku/students/_show_table.html.slim
+++ b/core/app/views/gaku/students/_show_table.html.slim
@@ -20,7 +20,7 @@
       tr
         th.btn-c2 = t('birth_date')
         td =student.birth_date
-        
+
       tr
         th.btn-c2 = t('admitted')
         td =student.admitted
@@ -28,7 +28,7 @@
         th.btn-c2 Enrollment Status
         td.vm
           #student-enrollment-status
-            =render 'gaku/students/enrollment_statuses/enrollment_status', :student => student if student.enrollment_status
+            /= render 'gaku/students/enrollment_statuses/enrollment_status', :student => student if student.enrollment_status
       tr
         th.btn-c2 = t('scholarship_status')
         td =student.scholarship
